# spotify-ad-muter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  TESTING_REPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  migration.md
docs/reference/: README.md
scripts/: install.sh  uninstall.sh
src/spotify_ad_muter/: __init__.py  audio.py  cli.py  config.py  mpris.py  service.py
systemd/: spotify-ad-muter.service
tests/: test_audio.py  test_cli.py  test_config.py  test_mpris.py  test_service.py
