[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-ad-muter"
version = "0.1.0"
description = "Mute Spotify ads from a standalone Python service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dbus-next>=0.2.3",
  "pulsectl>=24.12.0",
]

[project.scripts]
spotify-ad-muter = "spotify_ad_muter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
